--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,5 +17,33 @@ spec:
       containers:
         - name: go-httpserver
           image: 10.20.0.185/model/go-httpserver:v0.0.1
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /healthz
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /healthz
+              port: 80
+              scheme: HTTP
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: 200m
+              memory: 100Mi
+            requests:
+              cpu: 20m
+              memory: 20Mi
+          terminationGracePeriodSeconds: 30
           ports:
             - containerPort: 80
